CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT(DENSE_POINT_CLOUD)

SET(CMAKE_CXX_COMPILER "g++") 
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

FIND_PACKAGE(OpenCV REQUIRED COMPONENTS core highgui)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(PCL REQUIRED COMPONENTS common io filters)
FIND_PACKAGE(Boost REQUIRED)

ADD_DEFINITIONS(${PCL_DEFINITIONS})

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/include
  ${PCL_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/lib
  ${PCL_LIBRARY_DIRS}
  ${OpenCV_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS}
)

ADD_LIBRARY(cloudbuilder STATIC
  ${PROJECT_SOURCE_DIR}/src/cloudbuilder.cpp
)

TARGET_LINK_LIBRARIES(cloudbuilder
  pcl_io
  pcl_common
  pcl_filters
  opencv_core
  opencv_highgui
  boost_system
)

ADD_EXECUTABLE(buildcloud
  ${PROJECT_SOURCE_DIR}/src/cloudbuilder_main.cpp
)

TARGET_LINK_LIBRARIES(buildcloud
  pcl_io
  pcl_common
  cloudbuilder
)
